src/components/box/box.css
#boxContainer {
    padding: 0.4rem;
    max-width: 616px;
    background-color: rgba(255, 255, 255, 0.3);
    backdrop-filter: blur(5px);
}

#boxContainer #box {
    transition: background-color 250ms ease;
}

#boxContainer #box::selection {
    background-color: #e0f2fe;
}

.dark #boxContainer #box::selection {
    background-color: #424b52;
}

#boxContainer #typing {
    color: #cbd5e1;
    transition: color 500ms ease;
}

#boxContainer #typing.active {
    color: #212738;
}

#boxContainer #success,
#boxContainer #failed {
    transition: opacity 200ms ease;
}

.dark #boxContainer {
    background-color: rgba(0, 0, 0, 0.3);
}

.dark #boxContainer #typing.active {
    color: white;
}

.dark #boxContainer #typing {
    color: #64748b;
}

